# FritzingPartsSVGEditor

./: Doxyfile.in  FritzingPartsSVGEditor.desktop  FritzingPartsSVGEditor.xcf  Makefile.am  README.md  bootstrap  configure.ac
BuildData/: Makefile.am
BuildScripts/: Makefile.am
ExtraDoc/: Makefile.am
ScreenShots/: Makefile.am
Scripts/: FritzingPartsBreadboardEditor.tcl  FritzingPartsEditor.tcl  FritzingPartsPCBEditor.tcl  FritzingPartsSVGEditor.tcl  FritzingPartsSchematicEditor.tcl  Makefile.am  mainwindow.tcl  snitStdMenuBar.tcl  snitscrollw.tcl
m4/: ax_tcl_libraries.m4
