##-*- makefile -*-############################################################
#
#  System        : 
#  Module        : 
#  Object Name   : $RCSfile$
#  Revision      : $Revision$
#  Date          : $Date$
#  Author        : $Author$
#  Created By    : Robert Heller
#  Created       : Sun May 5 08:28:34 2019
#  Last Modified : <190505.1024>
#
#  Description	
#
#  Notes
#
#  History
#	
#  $Log$
#
##############################################################################
#
#    Copyright (C) 2019  Robert Heller D/B/A Deepwoods Software
#			51 Locke Hill Road
#			Wendell, MA 01379-9728
#
#    This program is free software; you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation; either version 2 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program; if not, write to the Free Software
#    Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#
# 
#
##############################################################################


SCRIPTS=DynamicHelp.tcl FritzingPartsSVGEditor.tcl IconsAndImages.tcl \
        mainwindow.tcl ParseXML.tcl ReadConfiguration.tcl snitbuttonbox.tcl \
        snitCabWidgets.tcl snitdialog.tcl snitHTMLHelp.tcl snitLFs.tcl \
        snitlistbox.tcl snitmainframe.tcl snitpagesmanager.tcl snitrotext.tcl \
        snitscrollableframe.tcl snitScrollNotebook.tcl snitscrollw.tcl \
        snitStdMenuBar.tcl snittree.tcl

IMAGES=close.gif DeepwoodsBanner.gif new.gif open.gif print.gif save.gif \
       openfold.png palette.png gray50.xbm info.xbm questhead.xbm unknown.xpm

EXTRA_DIST=$(SCRIPTS) $(IMAGES)
